--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
 <body>
-  <div id="app">APPLICATION CONTENT</div>
+  <div id="todoapp">APPLICATION CONTENT</div>
 
+	<footer id="info">
+		<p>Double-click to edit a todo</p>
+		<p>Created by <a href="http://facebook.com/bill.fisher.771">Bill Fisher</a></p>
+		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
+	</footer>    
   <script>__REACT_DEVTOOLS_GLOBAL_HOOK__ = parent.__REACT_DEVTOOLS_GLOBAL_HOOK__</script>
   <script type="text/javascript" src="./assets/app.js"></script>
 </body>
